# browser-mcp

./: .dockerignore  Dockerfile  README.md  pyproject.toml
.cursor/rules/: general-rules.mdc  python-standard-stack.mdc  step-by-step-execution.mdc  when-confused-or-unsure.mdc
app/: main.py
app/clients/: playwright_client.py
docs/: browser-usage-rules.md
