[project]
name = "browser-mcp"
version = "0.1.0"
description = "MCP server for browser automation based on Playwright"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "playwright",
    "mcp[cli]"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-mock",
    "pytest-cov"
]

[project.scripts]
setup-playwright = "playwright install --with-deps chromium"